account-data/Reishi-Narisada/ap-southeast-2/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-4d4da435",
                    "NetworkAclId": "acl-cf8297ab",
                    "SubnetId": "subnet-063f2962"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-4e4da436",
                    "NetworkAclId": "acl-cf8297ab",
                    "SubnetId": "subnet-8d7907d4"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-8b41a8f3",
                    "NetworkAclId": "acl-cf8297ab",
                    "SubnetId": "subnet-727b7c04"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-cf8297ab",
            "OwnerId": "416817624313",
            "Tags": [],
            "VpcId": "vpc-4696da22"
        }
    ]
}
